--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --clr-accent-400: hsl(12, 88%, 59%);
     --clr-accent-100: hsl(13, 100%, 96%);
 
-    --clr--primary-400: hsl(228, 39%, 23%);
+    --clr-primary-400: hsl(228, 39%, 23%);
 
     --clr-neutral-900: hsl(232, 12%, 13%);
     --clr-neutral-100: hsl(0 0% 100%);
@@ -160,3 +160,32 @@ textarea:not([rows]) {
 .fs-300 { font-size: var(--fs-300); }
 .fs-400 { font-size: var(--fs-400); }
 .fs-500 { font-size: var(--fs-500); }
+.fs-600 { font-size: var(--fs-600); }
+
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  margin-inline: auto;
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 50em) {
+  .even-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
+/* General Styling */
+
+body {
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
