--- a/style.css
+++ b/style.css
@@ -29,6 +29,16 @@
     --fs-secondary-heading: var(--fs-700);
     --fs-nav: var(--fs-500);
     --fs-button: var(--fs-300);
+
+    --size-100: 0.25rem;
+    --size-200: 0.5rem;
+    --size-300: 0.75rem;
+    --size-400: 1rem;
+    --size-500: 1.5rem;
+    --size-600: 2rem;
+    --size-700: 3rem;
+    --size-800: 4rem;
+    --size-900: 5rem;
 }
 
 @media (min-width: 50em) {
@@ -161,6 +171,18 @@ textarea:not([rows]) {
 .fs-400 { font-size: var(--fs-400); }
 .fs-500 { font-size: var(--fs-500); }
 .fs-600 { font-size: var(--fs-600); }
+
+.padding-block-900 {
+  padding-block: var(--size-900);
+}
+
+.padding-block-700 {
+  padding-block: var(--size-700);
+}
+
+.padding-block-400 {
+  padding-block: var(--size-400);
+}
 
 .container {
   --max-width: 1110px;
