--- a/style.css
+++ b/style.css
@@ -161,10 +161,12 @@ textarea:not([rows]) {
 
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
+  line-height: 1.1;
 }
 
 .fs-secondary-heading {
   font-size: var(--fs-secondary-heading);
+  line-height: 1.1;
 }
 
 .fs-300 { font-size: var(--fs-300); }
