--- a/style.css
+++ b/style.css
@@ -125,6 +125,20 @@ textarea:not([rows]) {
 }
 
 /* Utility classes */
+
+/* Hides the 'Menu' element on the screen, but makes it accessible to screen readers */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .text-primary-400 {
   color: var(--clr--primary-400);
 }
