Changes nav functionality to toggle attribute not class

--- a/style.css
+++ b/style.css
@@ -282,6 +282,11 @@ body {
     display: none;
   }
 
+  .primary-navigation[data-visible] {
+    display: block;
+    position: fixed;
+  }
+
   .mobile-nav-toggle {
     display: block;
     cursor: pointer;
@@ -293,9 +298,4 @@ body {
   .mobile-nav-toggle .icon-close {
     display: none;
   }
-}
-
-.opened {
-  display: block;
-  position: fixed;
 }
