Styles the navigation for desktop

--- a/style.css
+++ b/style.css
@@ -202,6 +202,19 @@ body {
 
 .nav-list {
   font-size: var(--fs-nav);
+  font-weight: var(--fw-semi-bold);
+  display: flex;
+  gap: clamp(var(--size-400), 5vw, var(--size-700));
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: var(--clr-primary-400);
+}
+
+.nav-list a:hover,
+.nav-list a:focus {
+  color: var(--clr-accent-400);
 }
 
 @media (max-width: 50em) {
@@ -211,6 +224,8 @@ body {
     position: fixed;
     padding: var(--size-700);
     inset: 7rem var(--size-400) auto;
+    max-width: 20rem;
+    margin-left: auto;
     background: var(--clr-neutral-100);
     border-radius: var(--size-100);
     box-shadow: 0 0 0.75em rgb(0, 0, 0, 0.05);
@@ -228,16 +243,6 @@ body {
     gap: var(--size-600);
     text-align: center;
     font-weight: var(--fw-bold);
-  }
-
-  .nav-list a {
-    text-decoration: none;
-    color: var(--clr-primary-400);
-  }
-  
-  .nav-list a:hover,
-  .nav-list a:focus {
-    color: var(--clr-accent-400);
   }
 
   .primary-navigation[data-visible] {
