--- a/style.css
+++ b/style.css
@@ -254,6 +254,35 @@ p[data-width="wide"] {
   }
 }
 
+/* CTA */
+
+.cta {
+  position: relative;
+  isolation: isolate;
+  text-align: center;
+}
+
+@media (min-width: 50em) {
+  .cta {
+    text-align: left;
+  }
+}
+
+.cta::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background-image: url(
+    "images/bg-tablet-pattern.svg"
+  ), url(
+    "images/bg-tablet-pattern.svg"
+  );
+  background-position: -15rem -5rem, 85rem -42rem;
+  background-repeat: no-repeat;
+  opacity: 0.1;
+}
+
 /* Utility classes */
 
 /* Hides the 'Menu' element on the screen, but makes it accessible to screen readers */
@@ -295,6 +324,12 @@ p[data-width="wide"] {
 
 .justify-self-end {
   justify-self: end;
+}
+
+@media (min-width: 50em) {
+  .justify-self-end-md {
+    justify-self: end;
+  }
 }
 
 :where(.flow :not(:first-child)) {
