--- a/style.css
+++ b/style.css
@@ -103,7 +103,6 @@ h3, h4 {
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
-  color: currentColor;
 }
 
 /* Make images easier to work with */
@@ -134,11 +133,11 @@ body {
 
 p:not([class]) {
   opacity: 0.7;
-  max-width: 42ch;
+  max-width: 32ch;
 }
 
 p[data-width="wide"] {
-  max-width: 100%;
+  max-width: 42ch;
 }
 
 /* Button */
@@ -252,6 +251,21 @@ p[data-width="wide"] {
   .mobile-nav-toggle .icon-close {
     display: none;
   }
+}
+
+/* Footer Navigation */
+
+.footer-nav {
+  columns: 2;
+}
+
+.footer-nav a {
+  color: var(--clr-neutral-100);
+  text-decoration: none;
+}
+
+.footer-nav a:is(:hover, :focus) {
+  color: var(--clr-accent-400);
 }
 
 /* CTA */
