--- a/style.css
+++ b/style.css
@@ -268,6 +268,29 @@ p[data-width="wide"] {
   color: var(--clr-accent-400);
 }
 
+/* Social List */
+
+.social-list {
+  display: flex;
+  gap: var(--size-300);
+}
+
+.social-icon {
+  width: var(--size-600);
+  aspect-ratio: 1;
+  fill: var(--clr-neutral-100);
+}
+
+.social-list a:is(:hover, :focus) .social-icon {
+  fill: var(--clr-accent-400);
+}
+
+@media (min-width: 50em) {
+  .social-icon {
+    width: var(--size-500);
+  }
+}
+
 /* CTA */
 
 .cta {
