--- a/style.css
+++ b/style.css
@@ -253,6 +253,12 @@ p[data-width="wide"] {
   }
 }
 
+/* Footer */
+
+.primary-footer {
+  --logo-color: var(--clr-neutral-100);
+}
+
 /* Footer Navigation */
 
 .footer-nav {
