--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ ol[role='list'] {
 }
 /* Set core root defaults */
 html, body {
-    height: 100%;
+    min-height: 100%;
+    overflow-x: hidden;
 }
 
 /* Set core body defaults */
@@ -553,7 +554,7 @@ input:where([type="text"], [type="email"]) {
   background: var(--clr-accent-400);
 }
 
-/* Image With Blob BG*/
+/* Hero Image */
 
 @media (max-width: 47em) {
   .hero__image {
@@ -579,6 +580,32 @@ input:where([type="text"], [type="email"]) {
 @media (min-width: 47em) {
   .hero__image::before {
     width: 45%;
+  }
+}
+
+/* Sales Points */
+
+.sales-points__blob {
+  position: relative;
+}
+
+.sales-points__blob::before {
+  content: url("images/bg-tablet-pattern.svg");
+  zoom: 35%;
+  position: absolute;
+  z-index: -1;
+  left: 70%;
+  bottom: 125%;
+  width: 100px; 
+}
+
+@media (min-width: 47em) {
+  .sales-points__blob::before {
+    zoom: 70%;
+    z-index: -1;
+    left: -500px;
+    top: 42%;
+    width: 100px; 
   }
 }
 
